[package]
name = "consistent_hash"
version = "0.1.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "An implementation of Consistent hashing algorithm"
documentation = "https://docs.rs/consistent_hash"
homepage = "https://github.com/sile/consistent_hash"
repository = "https://github.com/sile/consistent_hash"
readme = "README.md"
keywords = ["distributed", "hash"]
license = "MIT"

[dependencies]
siphasher = "0.1"
splay_tree = "0.1"

[dev-dependencies]
clap = "2.20"
